Modified JVM parameters for tests